<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="393dp"
        android:layout_height="19dp"
        android:text="@string/mi_perfil_personal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="62dp"
        android:layout_height="29dp"
        android:layout_marginTop="12dp"
        android:text="Nombre"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="68dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:text="Apellido"
        app:layout_constraintEnd_toEndOf="@+id/nombre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nombre"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="129dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:text="Correo electrónico"
        app:layout_constraintEnd_toEndOf="@+id/apellido"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/apellido"
        app:layout_constraintTop_toBottomOf="@+id/apellido" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="64dp"
        android:layout_height="25dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/apellido"
        android:layout_width="65dp"
        android:layout_height="28dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/email"
        android:layout_width="128dp"
        android:layout_height="29dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="193dp"
        android:layout_height="156dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/masculino"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:text="@string/genero1" />

        <RadioButton
            android:id="@+id/femenino"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:text="@string/genero2" />

        <RadioButton
            android:id="@+id/otro"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:text="@string/genero3" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="66dp"
        android:layout_height="27dp"
        android:layout_marginTop="24dp"
        android:text="Género"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <CheckBox
        android:id="@+id/lectura"
        android:layout_width="107dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:text="@string/CheckBox1"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <CheckBox
        android:id="@+id/deporte"
        android:layout_width="106dp"
        android:layout_height="26dp"
        android:layout_marginTop="8dp"
        android:text="@string/CheckBox2"
        app:layout_constraintEnd_toEndOf="@+id/lectura"
        app:layout_constraintStart_toStartOf="@+id/lectura"
        app:layout_constraintTop_toBottomOf="@+id/lectura" />

    <CheckBox
        android:id="@+id/musica"
        android:layout_width="106dp"
        android:layout_height="26dp"
        android:layout_marginTop="8dp"
        android:text="@string/CheckBox3"
        app:layout_constraintEnd_toEndOf="@+id/deporte"
        app:layout_constraintStart_toStartOf="@+id/deporte"
        app:layout_constraintTop_toBottomOf="@+id/deporte" />

    <CheckBox
        android:id="@+id/arte"
        android:layout_width="106dp"
        android:layout_height="26dp"
        android:layout_marginTop="8dp"
        android:text="@string/CheckBox4"
        app:layout_constraintEnd_toEndOf="@+id/musica"
        app:layout_constraintStart_toStartOf="@+id/musica"
        app:layout_constraintTop_toBottomOf="@+id/musica" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="158dp"
        android:layout_height="35dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="8dp"
        android:text="Intereses o hobbies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Nivel de satisfacción"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="129dp"
        android:layout_height="34dp"
        android:max="10"
        android:progress="1"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="Suscripción al Boletín"
        app:layout_constraintEnd_toEndOf="@+id/arte"
        app:layout_constraintStart_toStartOf="@+id/arte"
        app:layout_constraintTop_toBottomOf="@+id/arte" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Suscribirme"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Guardar"
        app:layout_constraintEnd_toStartOf="@+id/switch1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/resumen"
        android:layout_width="287dp"
        android:layout_height="119dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guardar"
        app:layout_constraintStart_toStartOf="@+id/guardar"
        app:layout_constraintTop_toBottomOf="@+id/guardar"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>